--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.8.7",
 		"@supabase/supabase-js": "^2.5.0",
+		"svelte-gestures": "^1.4.1",
 		"svelte-inview": "^3.0.2"
 	}
 }
