--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.8.7",
 		"@supabase/supabase-js": "^2.5.0",
+		"form-data": "^4.0.0",
+		"mailgun.js": "^8.0.6",
 		"svelte-gestures": "^1.4.1",
 		"svelte-inview": "^3.0.2"
 	}
