--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"sass": "^1.57.1",
+		"sass": "^1.58.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
@@ -35,13 +35,15 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.8.7",
-		"@supabase/supabase-js": "^2.5.0",
+		"@supabase/supabase-js": "^2.7.1",
+		"@sveltejs/adapter-vercel": "^2.0.1",
 		"@types/uuid": "^9.0.0",
 		"dayjs": "^1.11.7",
 		"form-data": "^4.0.0",
 		"mailgun.js": "^8.0.6",
 		"svelte-exmarkdown": "^1.1.7",
 		"svelte-gestures": "^1.4.1",
+		"svelte-highlight": "^7.1.2",
 		"svelte-inview": "^3.0.2",
 		"uuid": "^9.0.0"
 	}
