--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"sass": "^1.58.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-hcaptcha": "^0.1.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
