--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@supabase/auth-helpers-sveltekit": "^0.8.7",
 		"@supabase/supabase-js": "^2.7.1",
 		"@sveltejs/adapter-vercel": "^2.0.1",
+		"@tabler/icons-svelte": "^2.11.0",
 		"@types/uuid": "^9.0.0",
 		"dayjs": "^1.11.7",
 		"form-data": "^4.0.0",
