--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
 		"@types/uuid": "^9.0.0",
 		"dayjs": "^1.11.7",
 		"form-data": "^4.0.0",
+		"highlight.js": "^11.7.0",
 		"mailgun.js": "^8.0.6",
-		"svelte-exmarkdown": "^1.1.7",
+		"rehype-highlight": "^6.0.0",
+		"svelte-exmarkdown": "^2.0.0",
 		"svelte-gestures": "^1.4.1",
 		"svelte-highlight": "^7.1.2",
 		"svelte-inview": "^3.0.2",
